# MPI_basics_1

./: CMakeLists.txt  main.cpp
